tests/lesson-2/ex2.js
// error: const
let myName = 'Alex';
myName = 'Nagi';
console.log(myName);